# trigger

./: LICENSE  README.md  stack.yaml  trigger.cabal
example/: example.yaml
main/: Main.hs
src/: Console.hs  Parser.hs  Trigger.hs  Watcher.hs
test/: ParserSpec.hs
