name:                trigger
version:             0.1.0.0
homepage:            https://github.com/rhyskeepence/trigger
license:             BSD3
license-file:        LICENSE
author:              Rhys Keepence
maintainer:          rhys@rhyskeepence.com
copyright:           2017 Rhys Keepence
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable trigger
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , process
                     , twitch
  ghc-options:         -Wall -O2 -threaded -rtsopts                     
