name:                trigger
version:             0.1.0.0
homepage:            https://github.com/rhyskeepence/trigger
license:             BSD3
license-file:        LICENSE
author:              Rhys Keepence
maintainer:          rhys@rhyskeepence.com
copyright:           2017 Rhys Keepence
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , process
                     , protolude
                     , twitch
                     , yaml
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  exposed-modules:     Parser
                     , Trigger

executable trigger
  hs-source-dirs:      main
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , trigger
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite trigger-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , trigger
                     , hspec
  other-modules:       ParserSpec